<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/display_background"
        android:layout_margin="20dp"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/displayColor"
            android:background="@color/displayBg"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="end"
            />
        <TextView
            android:id="@+id/display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="40sp"
            android:gravity="end"
            android:textColor="@color/displayColor"
            android:background="@color/displayBg"
            android:text="@string/_0"

            />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:background="@color/gray">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="6"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                style="@style/CalculatorButton"
                android:id="@+id/btnPercent"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_percent" />

            <Button
                android:id="@+id/btnCE"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_clear_background"
                android:text="@string/_CE" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="0dp"
                style="@style/CalculatorButton"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@drawable/button_clear_background"
                android:text="@string/_C" />

            <Button
                android:id="@+id/btnBS"
                android:layout_width="0dp"
                style="@style/CalculatorButton"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_BS" />

            <Button
                android:id="@+id/btnInv"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_Inv" />

            <Button
                android:id="@+id/btnSqr"
                android:layout_width="0dp"
                style="@style/CalculatorButton"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_Sqr" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="0dp"
                style="@style/CalculatorButton"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_sqrt" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_div" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_mul" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/CalculatorButton"
                android:background="@drawable/button_background"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/CalculatorButton"
                android:background="@drawable/button_background"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_minus" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="2"
                android:background="@drawable/button_background"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:background="@drawable/button_operator_background"
                android:text="@string/_plus" />

            <Button
                android:id="@+id/btnAddInv"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="2"
                android:background="@drawable/button_background"
                android:text="@string/_addInv" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="2"
                android:background="@drawable/button_background"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="2"
                android:background="@drawable/button_background"
                android:text="@string/_dot" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="2"
                android:background="@drawable/button_equal_background"
                android:text="@string/_equal" />

        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>